20-create-ticket: Use library for string null check